Finish photo caption

--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -6,16 +6,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
     <title>Home</title>
   </head>
 
   <body class="body">
 
     <div class="kombi-container">
-     <button class="kombi-animator">
+     <div class="kombi-animator">
       <img class="kombi" src="../images/images-polaroid/kombi.png">
-     </button> 
+     </div> 
       <p class="kombi-text">Home</p>
       <p class="kombi-text-1">is</p>
       <p class="kombi-text-2"> wherever</p>
@@ -29,391 +31,458 @@
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/dia-dos-namorados.jpg">
-        </div>  
+        </div>
+        <p class="caption-polaroid">Primeiro dia dos namorados - 2017</p>  
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/dia1.jpeg">
         </div>
+        <p class="caption-polaroid">Primeiro presente - 2017</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/cj.jpg">
        </div>
+       <p class="caption-polaroid">Primeira Viagem - 2017</p>
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/cj2.jpg">
         </div>
+        <p class="caption-polaroid">Campos do Jordão - 2017</p>
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/cj3.jpg">
         </div>
+        <p class="caption-polaroid">Campos do Jordão - 2017</p>
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo"> 
          <img class="photo" src="../images/images-polaroid/ags.jpg">
         </div>
+        <p class="caption-polaroid">Conhecendo a família - 2017</p>
       </div>  
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/arya.jpg">
         </div>
+        <p class="caption-polaroid">Nossa filha - 2017</p>
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/meio-ano.png">
         </div>
+         <p class="caption-polaroid">Nosso primeiro marco com um oceano nos separando - 2017</p>
       </div>
 
       <div class="polaroid-frame">
         <div class="fade-photo">
          <img class="photo" src="../images/images-polaroid/ano-novo.jpg">
         </div>
+        <p class="caption-polaroid">Primeira virada - 2017/2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan.png">
        </div>
+       <p class="caption-polaroid">2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan2.jpg">
        </div>
+       <p class="caption-polaroid">Quando você me apoiou na ANAC - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan3.jpg">
        </div>
+       <p class="caption-polaroid">Formatura Curso Comissária - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev1.jpg">
        </div>
+       <p class="caption-polaroid">Valentine's Day - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev2.jpg">
        </div>
+       <p class="caption-polaroid">Primeiro jantar que eu te fiz - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev3.jpg">
        </div>
+       <p class="caption-polaroid">2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/mar.jpg">
        </div>
+       <p class="caption-polaroid">Nosso Picnic - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr1.jpg">
        </div>
+       <p class="caption-polaroid">Indo pro Peru 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr4.jpg">
        </div>
+       <p class="caption-polaroid">Cuzco - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr5.jpg">
        </div>
+       <p class="caption-polaroid">Moray - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr6.jpg">
        </div>
+       <p class="caption-polaroid">Cuzco - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr7.png">
        </div>
+       <p class="caption-polaroid">Nossa primeira aventura - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr8.jpg">
        </div>
+       <p class="caption-polaroid">Trem para Aguas Calientes - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr9.jpg">
        </div>
+       <p class="caption-polaroid">Começando meu aniversário antes do nascer do sol - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr10.jpg">
        </div>
+       <p class="caption-polaroid">Machu Picchu - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr11.jpg">
        </div>
+       <p class="caption-polaroid">Melhor aniversário - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr12.jpg">
        </div>
+       <p class="caption-polaroid">Abençoados por Pacha Mama - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr13.jpg">
        </div>
+       <p class="caption-polaroid">Fingindo não estar com medo - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr-14.png">
        </div>
+       <p class="caption-polaroid">Amo olhar você tirando fotos - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr14.jpg">
        </div>
+       <p class="caption-polaroid">Parceiros - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr-15.jpg">
        </div>
+       <p class="caption-polaroid">Primeira Remota a gente nunca esquece - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr15.jpg">
        </div>
+       <p class="caption-polaroid">Primeiro passeio de tuktuk - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr16.jpg">
        </div>
+       <p class="caption-polaroid">Noite na arábia e o dia também - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr17.jpg">
        </div>
+       <p class="caption-polaroid">Minha foto favorita - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr18.jpg">
        </div>
+       <p class="caption-polaroid">Lima - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr19.jpg">
        </div>
+       <p class="caption-polaroid">O fato de sempre ficar doente durante viagens deve ser estudado - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/brega.jpg">
        </div>
+       <p class="caption-polaroid">Nosso ladinho clichê - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/1ano.jpg">
        </div>
+       <p class="caption-polaroid">Nosso primeiro ano - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jun1.jpg">
        </div>
+       <p class="caption-polaroid">Quando eu forcei você a ter uma festa - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jul.jpg">
        </div>
+       <p class="caption-polaroid">A copa do mundo não foi nossa! - 2018 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/out.jpg">
        </div>
+       <p class="caption-polaroid">Nosso fim de semana Fancy - 2018 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/out2.jpg">
        </div>
+       <p class="caption-polaroid">Barra - 2018 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/dez.jpg">
        </div>
+       <p class="caption-polaroid">Natal - 2018 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/natal18.jpg">
        </div>
+       <p class="caption-polaroid">Nosso natal - 2018</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/311-12-18.jpg">
        </div>
+       <p class="caption-polaroid">Virada - 2018/2019</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b.jpg">
        </div>
+       <p class="caption-polaroid">Você me deu forças, mesmo de longe - 2019 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b1.jpg">
        </div>
+       <p class="caption-polaroid">Quando você foi odiar Brasília - 2019</p>
       </div>
+
+      <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/b5.jpg">
+        </div>
+        <p class="caption-polaroid">Quando você foi curtir SP comigo - 2019</p>
+       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b4.jpg">
        </div>
-      </div>
-
-      <div class="polaroid-frame">
-       <div class="fade-photo">
-        <img class="photo" src="../images/images-polaroid/b5.jpg">
-       </div>
+       <p class="caption-polaroid">Meu aniversário já contratada - 2019 </p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/2anos.jpg">
        </div>
+       <p class="caption-polaroid">Nosso aniversário -desastroso- de 2 anos - 2019</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b6.jpg">
        </div>
+       <p class="caption-polaroid">Você se importa com o que importa pra mim - 2019</p>
       </div>
+
+      <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/imagem-01.jpg">
+        </div>
+        <p class="caption-polaroid">Nós dois - 2019</p>
+       </div>
+ 
+       <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/imagem-02.jpg">
+        </div>
+        <p class="caption-polaroid">Mais uma de nós - 2019</p>
+       </div>
+ 
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b7.jpg">
        </div>
+       <p class="caption-polaroid">Natal - 2019</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b8.jpg">
        </div>
+       <p class="caption-polaroid">Fugidinha pra Paraty - 2020</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b9.jpg">
        </div>
+       <p class="caption-polaroid">Quem diria que seria nossa última aventura antes da pandemia - 2020</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b10.jpg">
        </div>
+       <p class="caption-polaroid">Fim de semana na Locanda - 2020</p>
       </div>
+
+      <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/c1.jpg">
+        </div>
+        <p class="caption-polaroid">Aniversário na Quarentena - 2020</p>
+       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/3anos.jpg">
        </div>
-      </div>
-
-      <div class="polaroid-frame">
-       <div class="fade-photo">
-        <img class="photo" src="../images/images-polaroid/imagem-01.jpg">
-       </div>
-      </div>
-
-      <div class="polaroid-frame">
-       <div class="fade-photo">
-        <img class="photo" src="../images/images-polaroid/imagem-02.jpg">
-       </div>
-      </div>
-
-      <div class="polaroid-frame">
-       <div class="fade-photo">
-        <img class="photo" src="../images/images-polaroid/c1.jpg">
-       </div>
-      </div>
-
-      <div class="polaroid-frame">
-       <div class="fade-photo">
-        <img class="photo" src="../images/images-polaroid/c2.jpg">
-       </div>
+       <p class="caption-polaroid">Nossos 3 anos, com o jantar que vc fez - 2020</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c3.jpg">
        </div>
+       <p class="caption-polaroid">Você Trintooou - 2020</p>
       </div>
+
+      <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/c2.jpg">
+        </div>
+        <p class="caption-polaroid">Casal quarentando - 2020</p>
+       </div>
+ 
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c4.jpg">
        </div>
+       <p class="caption-polaroid">Você fazendo minhas vontades loucas - 2020</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c5.jpg">
        </div>
+       <p class="caption-polaroid">Casal quarentando na mudança - 2021</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c6.jpeg">
        </div>
+       <p class="caption-polaroid">Páscoa - 2021</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c7.jpeg">
        </div>
+       <p class="caption-polaroid">E você, mais uma vez, me ajudando a ser melhor - 2021</p>
       </div>
 
       <div class="polaroid-frame">
        <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c8.jpeg">
        </div>
+       <p class="caption-polaroid">Você me faz feliz, mesmo quando você tem que sair da sua zona de conforto - 2021</p>
       </div>
 
     </div>
