--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Codystar:wght@300&display=swap" rel="stylesheet">   
     <title>Home</title>
   </head>
 
@@ -484,7 +486,13 @@
        </div>
        <p class="caption-polaroid">Você me faz feliz, mesmo quando você tem que sair da sua zona de conforto - 2021</p>
       </div>
+    </div>
 
+    <div class="last-one">
+      <img src="../images/images-polaroid/film.png">
+      <button class="b-text">
+       <p class="recharge"> Recarregar Filme</p>
+      </button>
     </div>
 
    <footer class="footer"><img class="instax" src="../images/images-polaroid/photo-cam.png"></footer>
