Add Link Page five

--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -490,9 +490,9 @@
 
     <div class="last-one">
       <img src="../images/images-polaroid/film.png">
-      <button class="b-text">
-       <p class="recharge"> Recarregar Filme</p>
-      </button>
+       <button class="b-text"><a class="recharge" href="../letter-page/index.html">
+       <p class="recharge"> Recarregar Filme</p></a>
+       </button>
     </div>
 
    <footer class="footer"><img class="instax" src="../images/images-polaroid/photo-cam.png"></footer>
