--- a/letter-page/index.html
+++ b/letter-page/index.html
@@ -17,34 +17,37 @@
   </head>
 
   <body class="back-letter">
-    <div class="text-container">
-       <p class="letter">E então fazem 4 anos desde aquela noite, sentados no banco da praça do Cenip enquanto enrolávamos para eu pegar o último ônibus para casa.</p>
-       <h4 class="letter-h4">4 anos, 48 meses, 1.460 dias, 87.600 horas, 5.256.000 minutos e 315.360.000 segundos.</h4>
-       <p class="letter">É, o tempo passou... os medos e inseguranças foram dando espaço para a compreensão e para o diálogo, a vergonha deu espaço para a intimidade e as paronoias foram dando espaço para a maturidade.</p>
-       <p class="letter">Falar disso tudo me faz pensar nos nossos sonhos de 4 anos atrás, como eles pareciam intocáveis... agora? eu consigo quase encostar a pontinha do dedo neles (só não mais por fatores externos).</p>      
-       <p class="letter">Na verdade, se eu paro para pensar mesmo e tento colocar esse tempo em uma palavra que não seja amor, seria "Crescimento". Crescemos como indivíduos e crescemos como casal.</p>
-       <p class="letter">Com todas as razões e diferenças que temos, se não fosse pela nossa contínua vontade de crescer e, com isso, melhorar um para o outro, nós não teríamos passado nem da minha primeira crise de ciúmes e nem da sua frieza inicial. </p>
-       <p class="letter">Mas, por algum motivo, a gente continuou e quis continuar juntos... Eu sendo sentimento e você razão. Talvez tenhamos chegado no equilíbrio perfeito...</p>
-       <p class="letter">Você aprendendo a cozinhar e eu a programar.</p>
-       <p class="letter">Você superou tantas coisas na sua vida, você foi, e é, tão forte e por tanto tempo... sua força me inspira a querer ser forte também, querer superar e me superar como você faz.</p>
-       <p class="letter">Eu sei que você não curte a moda da "gratidão", mas não tem como falar o que eu sinto sem usar essa palavra. Esse é o sentimento, que, junto com o Amor, enche meu coraçãozinho de calor.</p>
-       <p class="letter">Eu cresci, melhorei e me esforcei tanto, e eu sei que ainda tem muito para melhorar pela frente, mas eu não sinto medo, pois você vai estar aqui, independente do desafio ou obstáculo, nós vamos ficar bem, contando que estejamos juntos (E nós estaremos!). </p>
-       <p class="letter">Tenho tanto orgulho de você, da nossa história, do nosso crescimento. CARAMBA, eu tenho MUITO orgulho de NÓS!</p>
-       <p class="letter">Só me preparando para essa comemoração que eu me dei conta de quanto a vida melhorou, começou a andar pra frente desde quando eu posso contar com seu apoio. </p>
-       <p class="letter">E se eu pudesse mudar alguma coisa desses últimos 4 anos, eu não faria nadinha diferente. OK, talvez eu desse um jeito de evitar o corona, ou talvez não, tudo acontece por um motivo...</p>
-       <p class="letter">Por mais que eu quisesse estar a mil por hora no nosso casamento, eu acredito que até isso não foi de todo ruim... afinal, eu estou aprendendo mil coisas novascom você por conta da pandemia...</p>
-       <p class="letter">E falar de nós só tem sentido quando falamos de Amor. Eu te Amo como nunca achei ser capaz de amar alguém e sei que você me Ama da mesma forma. Você é meu lugar preferido do mundo e eu honestamente não consigo nem imaginar o que teria se dado da minha vida sem você!</p>
-       <p class="letter">Obrigada. Obrigada por nunca ter desistido de nós, por ter me mimado sempre que possível, por me fazer querer melhorar, por me fazer sentir segura, por trazer a tona o melhor de mim, por me fazer sorrir e por sorrir comigo, por estar ao meu lado a todo momento, por ter carinho com as pessoas que são importantes pra mim, por tentar me surpreender, por me aturar até no meu pior, por ter metas para nós, por sonhar comigo, por topar as ideias mais loucas, por cuidar de mim, por me deixar cuidar de você, por ser parte da minha família.</p>
-       <h4 class="letter-h4">Obrigada por tudo e por tanto!</h4>
-       <h4 class="letter-h4">Feliz 4 anos de nós dois!</h4>
-       <p class="letter">Home? Yes, I'm home... </p>
-       <h3 class="letter-h3">Home is wherever I'm with you!</h3>
-       <p class="letter">ps: Enalteça meu sitezinho mais do que você acha necessário pra eu ficar mais feliz!</p>
-    </div>
-    
-    <div class="left-side"></div>
-    <div class="right-side"></div>
-    <div class="bottom-side"></div>
-    <div class="top-side"></div>
+    <main class="letter-container">
 
+      <div class="text-container">
+         <p class="letter">E então fazem 4 anos desde aquela noite, sentados no banco da praça do Cenip enquanto enrolávamos para eu pegar o último ônibus para casa.</p>
+         <h4 class="letter-h4">4 anos, 48 meses, 1.460 dias, 87.600 horas, 5.256.000 minutos e 315.360.000 segundos.</h4>
+         <p class="letter">É, o tempo passou... os medos e inseguranças foram dando espaço para a compreensão e para o diálogo, a vergonha deu espaço para a intimidade e as paronoias foram dando espaço para a maturidade.</p>
+         <p class="letter">Falar disso tudo me faz pensar nos nossos sonhos de 4 anos atrás, como eles pareciam intocáveis... agora? eu consigo quase encostar a pontinha do dedo neles (só não mais por fatores externos).</p>      
+         <p class="letter">Na verdade, se eu paro para pensar mesmo e tento colocar esse tempo em uma palavra que não seja amor, seria "Crescimento". Crescemos como indivíduos e crescemos como casal.</p>
+         <p class="letter">Com todas as razões e diferenças que temos, se não fosse pela nossa contínua vontade de crescer e, com isso, melhorar um para o outro, nós não teríamos passado nem da minha primeira crise de ciúmes e nem da sua frieza inicial. </p>
+         <p class="letter">Mas, por algum motivo, a gente continuou e quis continuar juntos... Eu sendo sentimento e você razão. Talvez tenhamos chegado no equilíbrio perfeito...</p>
+         <p class="letter">Você aprendendo a cozinhar e eu a programar.</p>
+         <p class="letter">Você superou tantas coisas na sua vida, você foi, e é, tão forte e por tanto tempo... sua força me inspira a querer ser forte também, querer superar e me superar como você faz.</p>
+         <p class="letter">Eu sei que você não curte a moda da "gratidão", mas não tem como falar o que eu sinto sem usar essa palavra. Esse é o sentimento, que, junto com o Amor, enche meu coraçãozinho de calor.</p>
+         <p class="letter">Eu cresci, melhorei e me esforcei tanto, e eu sei que ainda tem muito para melhorar pela frente, mas eu não sinto medo, pois você vai estar aqui, independente do desafio ou obstáculo, nós vamos ficar bem, contando que estejamos juntos (E nós estaremos!). </p>
+         <p class="letter">Tenho tanto orgulho de você, da nossa história, do nosso crescimento. CARAMBA, eu tenho MUITO orgulho de NÓS!</p>
+         <p class="letter">Só me preparando para essa comemoração que eu me dei conta de quanto a vida melhorou, começou a andar pra frente desde quando eu posso contar com seu apoio. </p>
+         <p class="letter">E se eu pudesse mudar alguma coisa desses últimos 4 anos, eu não faria nadinha diferente. OK, talvez eu desse um jeito de evitar o corona, ou talvez não, tudo acontece por um motivo...</p>
+         <p class="letter">Por mais que eu quisesse estar a mil por hora no nosso casamento, eu acredito que até isso não foi de todo ruim... afinal, eu estou aprendendo mil coisas novascom você por conta da pandemia...</p>
+         <p class="letter">E falar de nós só tem sentido quando falamos de Amor. Eu te Amo como nunca achei ser capaz de amar alguém e sei que você me Ama da mesma forma. Você é meu lugar preferido do mundo e eu honestamente não consigo nem imaginar o que teria se dado da minha vida sem você!</p>
+         <p class="letter">Obrigada. Obrigada por nunca ter desistido de nós, por ter me mimado sempre que possível, por me fazer querer melhorar, por me fazer sentir segura, por trazer a tona o melhor de mim, por me fazer sorrir e por sorrir comigo, por estar ao meu lado a todo momento, por ter carinho com as pessoas que são importantes pra mim, por tentar me surpreender, por me aturar até no meu pior, por ter metas para nós, por sonhar comigo, por topar as ideias mais loucas, por cuidar de mim, por me deixar cuidar de você, por ser parte da minha família.</p>
+         <h4 class="letter-h4">Obrigada por tudo e por tanto!</h4>
+         <h4 class="letter-h4">Feliz 4 anos de nós dois!</h4>
+         <p class="letter">Home? Yes, I'm home... </p>
+         <h3 class="letter-h3">Home is wherever I'm with you!</h3>
+         <p class="letter">ps: Enalteça meu sitezinho mais do que você acha necessário pra eu ficar mais feliz!</p>
+      </div>
+    
+      <div class="left-side"></div>
+      <div class="right-side"></div>
+      <div class="bottom-side"></div>
+      <div class="top-side"></div>
+      <button class="button-selo"><img class="selo" src="../images/images-letter/selo.png"></button>
+    </div>
   </body>
