--- a/letter-page/index.html
+++ b/letter-page/index.html
@@ -47,7 +47,19 @@
       <div class="left-side"></div>
       <div class="right-side"></div>
       <div class="bottom-side"></div>
-      <div class="top-side"></div>
-      <button class="button-selo"><img class="selo" src="../images/images-letter/selo.png"></button>
+      
+      <label for="toggle"><input type="checkbox" id="top" class="top-check">
+       <div class="top-side"></div>
+      </label>
+
+
+
+
+      <label for="toggle"><input type="checkbox" id="toggle" class="hidden">
+       <div class="content"></div>
+      </label>
+      
+
+
     </div>
   </body>
