--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -14,8 +14,8 @@
     <title>Home</title>
   </head>
 
-  <body class="body">
-
+  <body id="body">
+  <div class="body-countainer" >
     <div class="kombi-container">
      <div class="kombi-animator">
       <img class="kombi" src="../images/images-polaroid/kombi.png">
@@ -494,7 +494,7 @@
        <p class="recharge"> Recarregar Filme</p></a>
        </button>
     </div>
-
+  </div>
    <footer class="footer"><img class="instax" src="../images/images-polaroid/photo-cam.png"></footer>
 
   </body>
