--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <link rel="stylesheet" href="stylesheet/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
-    <title>Time Machine</title>
+    <title>Blackhole</title>
     </head>
 
-    <body>
-        this is a time machine
-        <a href="tinder-profile/index.html">this is the way</a>
+    <body id="corpo">
+      <div class="the-doors">
+        <div class="door-1"></div>
+
+        <div class="door-2"></div>
+
+        <div class="door 3"></div>
+        
+        <div class="door 4"></div>
+
+        <a href="tinder-profile/index.html"></a>
+
+      </div>
     </body>
