--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <link rel="stylesheet" href="stylesheet/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <title>Blackhole</title>
     </head>
 
     <body id="corpo">
+      <h1 class="door-text">Escolha uma porta</h1>
+
       <div class="the-doors">
-        <div class="door-1"></div>
 
-        <div class="door-2"></div>
+        <label for="one"><input type="checkbox" id="one" class="one-check">
+         <div class="door-1"></div></label>
 
-        <div class="door 3"></div>
+        <label for="two"><input type="checkbox" id="two" class="two-check">
+         <div class="door-2"></div></label>
+
+        <label for="three"><input type="checkbox" id="three" class="three-check">
+         <div class="door-3"></div></label>
         
-        <div class="door 4"></div>
+        <label for="four"><input type="checkbox" id="four" class="four-check">
+         <div class="door-4"></div></label>
 
         <a href="tinder-profile/index.html"></a>
 
