--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="four"><input type="checkbox" id="four" class="four-check">
          <div class="door-4"></div></label>
 
-        <a href="tinder-profile/index.html"></a>
+         <a class="link-page2" href="tinder-profile/index.html"></a>
 
       </div>
     </body>
